feat(ai): 현재 프로젝트의 코드에서 개선할 수 있는 10가지 점을 제안합니다:
1. **접근성 개선

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My App — Field Nine</title>
   <link rel="stylesheet" href="style.css" />
+  <meta name="description" content="AI-Powered Development Platform" />
+  <meta name="keywords" content="AI, Development, Web, Field Nine" />
 </head>
 <body>
   <div class="app">
     <nav class="nav">
       <div class="nav-brand">
-        <span class="logo">⚡</span>
+        <span class="logo" aria-label="Lightning Bolt">⚡</span>
         <span>Field Nine App</span>
       </div>
       <div class="nav-links">
