--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My App — Field Nine</title>
   <link rel="stylesheet" href="style.css" />
-  <meta name="description" content="AI-Powered Development Platform" />
-  <meta name="keywords" content="AI, Development, Web, Field Nine" />
 </head>
 <body>
   <div class="app">
     <nav class="nav">
       <div class="nav-brand">
-        <span class="logo" aria-label="Lightning Bolt">⚡</span>
+        <span class="logo">⚡</span>
         <span>Field Nine App</span>
       </div>
       <div class="nav-links">
