--- a/index.html
+++ b/index.html
@@ -33,6 +33,24 @@
       </div>
     </main>
 
+    <section class="features">
+      <h2>주요 기능</h2>
+      <div class="feature-list">
+        <div class="feature">
+          <h3>빠른 개발</h3>
+          <p>즉각적인 코드 반영 및 배포.</p>
+        </div>
+        <div class="feature">
+          <h3>유연한 설계</h3>
+          <p>다양한 레이아웃과 컴포넌트.</p>
+        </div>
+        <div class="feature">
+          <h3>확장성</h3>
+          <p>필요에 따라 기능을 추가 가능.</p>
+        </div>
+      </div>
+    </section>
+
     <section class="cards" id="cardContainer">
     </section>
 
