chore: auto-save code changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My App — Field Nine</title>
   <link rel="stylesheet" href="style.css" />
+  <meta name="description" content="Field Nine AI-Powered Development Platform">
+  <meta name="keywords" content="AI, Development, Web">
+  <meta name="author" content="Field Nine">
 </head>
 <body>
   <div class="app" aria-label="Field Nine Application">
