--- a/index.html
+++ b/index.html
@@ -3,227 +3,70 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Field Nine — 자동 테스트 & 실시간 리포트</title>
+  <title>Field Nine — AI Development Platform</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="app">
-    <nav class="nav">
-      <div class="nav-brand">
-        <span class="logo">🎯</span>
-        <span>Field Nine Auto Test</span>
-      </div>
-      <div class="nav-links">
-        <a href="#" class="active" id="liveTestTab">Live Test</a>
-        <a href="#" id="reportTab">Report</a>
-        <a href="#" id="settingsTab">Settings</a>
-      </div>
-    </nav>
-
-    <!-- Live Test 탭 -->
-    <main class="workspace" id="liveTestContent">
-      <div class="control-panel">
-        <div class="test-controls">
-          <button class="primary-btn" id="startAutoTest">🚀 자동 테스트 시작</button>
-          <button class="secondary-btn" id="pauseTest" disabled>⏸ 일시정지</button>
-          <button class="secondary-btn" id="stopTest" disabled>⏹ 중지</button>
-          <button class="secondary-btn" id="resetTest">🔄 리셋</button>
+    <header class="header">
+      <div class="header-content">
+        <div class="brand">
+          <div class="brand-icon">⚡</div>
+          <span class="brand-name">Field Nine</span>
         </div>
-        <div class="status-indicators">
-          <div class="indicator" id="testStatus">
-            <span class="status-dot standby"></span>
-            <span>대기 중</span>
-          </div>
-          <div class="indicator">
-            <span class="progress-text" id="progressText">0%</span>
-          </div>
-          <div class="indicator">
-            <span id="testTimer">00:00</span>
-          </div>
+        <div class="status-indicator">
+          <div class="status-dot"></div>
+          <span>시스템 정상</span>
         </div>
       </div>
+    </header>
 
-      <div class="main-content">
-        <div class="video-section">
-          <div class="video-header">
-            <h3>📹 실시간 테스트 영상</h3>
-            <div class="video-controls">
-              <button class="icon-btn" id="recordBtn" title="녹화 시작/중지">🔴</button>
-              <button class="icon-btn" id="screenshotBtn" title="스크린샷">📸</button>
-              <button class="icon-btn" id="fullscreenBtn" title="전체화면">⛶</button>
-              <button class="icon-btn" id="saveVideoBtn" title="비디오 저장">💾</button>
-            </div>
-          </div>
-          <div class="video-container" id="videoContainer">
-            <div class="test-screen" id="testScreen">
-              <div class="recording-overlay" id="recordingOverlay" style="display: none;">
-                <div class="rec-indicator">
-                  <span class="rec-dot"></span>
-                  <span>REC</span>
-                </div>
-                <div class="timestamp" id="timestamp">00:00:00</div>
-              </div>
-              <canvas id="testCanvas" width="800" height="600"></canvas>
-            </div>
-            <div class="progress-bar">
-              <div class="progress-fill" id="progressFill"></div>
-            </div>
-          </div>
-        </div>
-
-        <div class="report-section">
-          <div class="report-header">
-            <h3>📊 실시간 테스트 보고서</h3>
-            <button class="export-btn" id="exportReport">📋 내보내기</button>
-          </div>
-          <div class="report-content">
-            <div class="test-phases" id="testPhases">
-              <div class="phase completed">
-                <span class="phase-icon">✅</span>
-                <span>초기화 완료</span>
-                <span class="phase-time">0.2s</span>
-              </div>
-            </div>
-            <div class="metrics-grid">
-              <div class="metric-card">
-                <div class="metric-value" id="testsRun">0</div>
-                <div class="metric-label">실행된 테스트</div>
-              </div>
-              <div class="metric-card success">
-                <div class="metric-value" id="testsPass">0</div>
-                <div class="metric-label">성공</div>
-              </div>
-              <div class="metric-card error">
-                <div class="metric-value" id="testsFail">0</div>
-                <div class="metric-label">실패</div>
-              </div>
-              <div class="metric-card">
-                <div class="metric-value" id="coverage">0%</div>
-                <div class="metric-label">커버리지</div>
-              </div>
-            </div>
+    <main class="main">
+      <div class="hero-section">
+        <div class="hero-content">
+          <h1 class="hero-title">
+            차세대 AI 개발 플랫폼
+            <span class="title-accent">Field Nine</span>
+          </h1>
+          <p class="hero-description">
+            인공지능과 함께하는 스마트한 개발 경험
+          </p>
+          <div class="cta-section">
+            <button class="btn-primary" id="startBtn">
+              <span class="btn-icon">🚀</span>
+              시작하기
+            </button>
+            <button class="btn-secondary" id="analyticsBtn">
+              <span class="btn-icon">📊</span>
+              분석 보기
+            </button>
           </div>
         </div>
       </div>
 
-      <div class="log-section">
-        <div class="log-header">
-          <h3>📝 실시간 로그</h3>
-          <div class="log-controls">
-            <button class="filter-btn active" data-filter="all">전체</button>
-            <button class="filter-btn" data-filter="info">정보</button>
-            <button class="filter-btn" data-filter="success">성공</button>
-            <button class="filter-btn" data-filter="error">에러</button>
-            <button class="clear-btn" id="clearLogs">🗑 지우기</button>
+      <div class="dashboard" id="dashboard">
+        <div class="metrics-grid">
+          <div class="metric-card">
+            <div class="metric-icon">⚡</div>
+            <div class="metric-value" id="performanceScore">98.5</div>
+            <div class="metric-label">성능 점수</div>
           </div>
-        </div>
-        <div class="log-container" id="logContainer">
-          <div class="log-entry info">
-            <span class="log-time">00:00:00</span>
-            <span class="log-message">시스템 초기화 완료</span>
+          <div class="metric-card">
+            <div class="metric-icon">🎯</div>
+            <div class="metric-value" id="accuracy">99.2%</div>
+            <div class="metric-label">정확도</div>
           </div>
-          <div class="log-entry success">
-            <span class="log-time">00:00:01</span>
-            <span class="log-message">자동 테스트 준비 완료</span>
+          <div class="metric-card">
+            <div class="metric-icon">🔄</div>
+            <div class="metric-value" id="processedTasks">1,247</div>
+            <div class="metric-label">처리된 작업</div>
           </div>
-        </div>
-      </div>
-
-      <div class="auto-features">
-        <div class="feature-card" id="aiAnalysisCard">
-          <div class="feature-icon">🤖</div>
-          <h4>AI 자동 분석</h4>
-          <p>코드를 자동으로 분석하고 최적의 테스트 시나리오를 생성합니다.</p>
-          <button class="feature-btn">분석 시작</button>
-        </div>
-        <div class="feature-card" id="realTimeFeedbackCard">
-          <div class="feature-icon">⚡</div>
-          <h4>실시간 피드백</h4>
-          <p>테스트 진행 상황을 실시간으로 모니터링하고 즉시 결과를 제공합니다.</p>
-          <button class="feature-btn">모니터링 시작</button>
-        </div>
-        <div class="feature-card" id="performanceCard">
-          <div class="feature-icon">📈</div>
-          <h4>성능 모니터링</h4>
-          <p>메모리 사용량, 실행 시간 등 성능 지표를 자동으로 수집합니다.</p>
-          <button class="feature-btn">성능 분석</button>
-        </div>
-        <div class="feature-card" id="smartReportCard">
-          <div class="feature-icon">🎯</div>
-          <h4>스마트 보고서</h4>
-          <p>테스트 결과를 분석하여 개선 방안을 자동으로 제안합니다.</p>
-          <button class="feature-btn">보고서 생성</button>
         </div>
       </div>
     </main>
 
-    <!-- Report 탭 -->
-    <div class="workspace hidden" id="reportContent">
-      <div class="report-dashboard">
-        <h2>📊 테스트 보고서 대시보드</h2>
-        <div class="dashboard-stats">
-          <div class="stat-card">
-            <div class="stat-value" id="totalTests">0</div>
-            <div class="stat-label">총 테스트</div>
-          </div>
-          <div class="stat-card success">
-            <div class="stat-value" id="successRate">0%</div>
-            <div class="stat-label">성공률</div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-value" id="avgDuration">0s</div>
-            <div class="stat-label">평균 소요시간</div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-value" id="lastRun">-</div>
-            <div class="stat-label">마지막 실행</div>
-          </div>
-        </div>
-        <div class="chart-container">
-          <canvas id="performanceChart" width="800" height="400"></canvas>
-        </div>
-      </div>
-    </div>
-
-    <!-- Settings 탭 -->
-    <div class="workspace hidden" id="settingsContent">
-      <div class="settings-panel">
-        <h2>⚙️ 설정</h2>
-        <div class="settings-section">
-          <h3>테스트 설정</h3>
-          <div class="setting-item">
-            <label for="testTimeout">테스트 타임아웃 (초)</label>
-            <input type="number" id="testTimeout" value="30" min="5" max="300">
-          </div>
-          <div class="setting-item">
-            <label for="autoRetry">실패시 자동 재시도</label>
-            <input type="checkbox" id="autoRetry" checked>
-          </div>
-          <div class="setting-item">
-            <label for="parallelTests">병렬 테스트 수</label>
-            <input type="number" id="parallelTests" value="4" min="1" max="10">
-          </div>
-        </div>
-        <div class="settings-section">
-          <h3>알림 설정</h3>
-          <div class="setting-item">
-            <label for="soundNotification">사운드 알림</label>
-            <input type="checkbox" id="soundNotification" checked>
-          </div>
-          <div class="setting-item">
-            <label for="emailNotification">이메일 알림</label>
-            <input type="checkbox" id="emailNotification">
-          </div>
-        </div>
-        <div class="settings-actions">
-          <button class="primary-btn" id="saveSettings">설정 저장</button>
-          <button class="secondary-btn" id="resetSettings">기본값 복원</button>
-        </div>
-      </div>
-    </div>
-
     <footer class="footer">
-      <p>🎯 Automated Testing & Real-time Reporting • Powered by Field Nine AI</p>
+      <p>&copy; 2024 Field Nine. All rights reserved.</p>
     </footer>
   </div>
 
