--- a/index.html
+++ b/index.html
@@ -3,73 +3,129 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Field Nine — AI Development Platform</title>
+  <title>Field Nine — Premium Development Platform</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="app">
-    <header class="header">
-      <div class="header-content">
-        <div class="brand">
-          <div class="brand-icon">⚡</div>
-          <span class="brand-name">Field Nine</span>
-        </div>
-        <div class="status-indicator">
-          <div class="status-dot"></div>
-          <span>시스템 정상</span>
-        </div>
+    <nav class="nav">
+      <div class="nav-brand">
+        <span class="logo">⚡</span>
+        <span>Field Nine</span>
       </div>
-    </header>
+      <div class="nav-links">
+        <a href="#" class="nav-link active" data-section="home">홈</a>
+        <a href="#" class="nav-link" data-section="features">기능</a>
+        <a href="#" class="nav-link" data-section="about">소개</a>
+        <a href="#" class="nav-link" data-section="contact">연락</a>
+      </div>
+      <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="메뉴 열기">☰</button>
+    </nav>
 
-    <main class="main">
-      <div class="hero-section">
-        <div class="hero-content">
-          <h1 class="hero-title">
-            차세대 AI 개발 플랫폼
-            <span class="title-accent">Field Nine</span>
-          </h1>
-          <p class="hero-description">
-            인공지능과 함께하는 스마트한 개발 경험
-          </p>
-          <div class="cta-section">
-            <button class="btn-primary" id="startBtn">
-              <span class="btn-icon">🚀</span>
-              시작하기
-            </button>
-            <button class="btn-secondary" id="analyticsBtn">
-              <span class="btn-icon">📊</span>
-              분석 보기
-            </button>
-          </div>
+    <main class="hero">
+      <div class="hero-badge">🚀 AI-Powered Development Platform</div>
+      <h1>코딩의 미래를<br/><span class="gradient-text">지금 경험하세요</span></h1>
+      <p class="hero-desc">Field Nine에서 혁신적인 개발 경험을 만나보세요.<br/>AI와 함께 더 빠르고 스마트하게 개발하세요.</p>
+      
+      <div class="hero-stats">
+        <div class="stat-item">
+          <span class="stat-number" id="userCount">1,247</span>
+          <span class="stat-label">활성 사용자</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-number" id="projectCount">5,832</span>
+          <span class="stat-label">완성된 프로젝트</span>
+        </div>
+        <div class="stat-item">
+          <span class="stat-number" id="codeLines">2.4M</span>
+          <span class="stat-label">작성된 코드라인</span>
         </div>
       </div>
 
-      <div class="dashboard" id="dashboard">
-        <div class="metrics-grid">
-          <div class="metric-card">
-            <div class="metric-icon">⚡</div>
-            <div class="metric-value" id="performanceScore">98.5</div>
-            <div class="metric-label">성능 점수</div>
-          </div>
-          <div class="metric-card">
-            <div class="metric-icon">🎯</div>
-            <div class="metric-value" id="accuracy">99.2%</div>
-            <div class="metric-label">정확도</div>
-          </div>
-          <div class="metric-card">
-            <div class="metric-icon">🔄</div>
-            <div class="metric-value" id="processedTasks">1,247</div>
-            <div class="metric-label">처리된 작업</div>
-          </div>
+      <div class="hero-actions">
+        <button class="btn btn-primary" id="startBtn">
+          <span>무료로 시작하기</span>
+          <span class="btn-icon">→</span>
+        </button>
+        <button class="btn btn-secondary" id="addCardBtn">
+          <span>데모 보기</span>
+          <span class="btn-icon">▶</span>
+        </button>
+      </div>
+
+      <div class="counter-display">
+        <div class="counter-item">
+          <span class="counter-label">클릭 수:</span>
+          <span class="counter-value" id="count">0</span>
+        </div>
+        <div class="counter-item">
+          <span class="counter-label">생성된 카드:</span>
+          <span class="counter-value" id="cardCount">0</span>
+        </div>
+        <div class="progress-bar">
+          <div class="progress-fill" id="progressFill"></div>
         </div>
       </div>
     </main>
 
+    <section class="features-section">
+      <h2 class="section-title">핵심 기능</h2>
+      <div class="features-grid">
+        <div class="feature-card">
+          <div class="feature-icon">🤖</div>
+          <h3>AI 코드 어시스턴트</h3>
+          <p>인공지능이 실시간으로 코드를 분석하고 최적화 제안을 제공합니다.</p>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">⚡</div>
+          <h3>실시간 협업</h3>
+          <p>팀원들과 실시간으로 코드를 공유하고 함께 개발할 수 있습니다.</p>
+        </div>
+        <div class="feature-card">
+          <div class="feature-icon">🎯</div>
+          <h3>스마트 배포</h3>
+          <p>원클릭으로 전 세계 어디든 안전하고 빠르게 배포할 수 있습니다.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="cards-section">
+      <div class="section-header">
+        <h2 class="section-title">프로젝트 갤러리</h2>
+        <button class="btn btn-outline" id="clearCardsBtn">전체 삭제</button>
+      </div>
+      <div class="cards-container" id="cardContainer">
+        <div class="empty-state" id="emptyState">
+          <div class="empty-icon">📁</div>
+          <p>아직 프로젝트가 없습니다.<br/>"데모 보기" 버튼을 눌러 카드를 생성해보세요!</p>
+        </div>
+      </div>
+    </section>
+
     <footer class="footer">
-      <p>&copy; 2024 Field Nine. All rights reserved.</p>
+      <div class="footer-content">
+        <div class="footer-brand">
+          <span class="logo">⚡</span>
+          <span>Field Nine</span>
+        </div>
+        <div class="footer-links">
+          <a href="#">개인정보처리방침</a>
+          <a href="#">이용약관</a>
+          <a href="#">고객지원</a>
+        </div>
+        <div class="footer-social">
+          <a href="#" aria-label="Twitter">🐦</a>
+          <a href="#" aria-label="GitHub">🐙</a>
+          <a href="#" aria-label="Discord">💬</a>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2024 Field Nine. Built with <span class="heart">♥</span> and AI</p>
+      </div>
     </footer>
   </div>
 
+  <div class="toast-container" id="toastContainer"></div>
   <script src="app.js"></script>
 </body>
 </html>
