--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main class="hero">
       <div class="hero-badge">🚀 AI-Powered Development</div>
-      <h1>Build Anything,<br/><span class="gradient-text">Ship Everywhere</span></h1>
+      <h1>테스트 헤더 변경됨!<br/><span class="gradient-text">Syncing 테스트중</span></h1>
       <p>이 에디터에서 직접 코드를 수정해보세요.<br/>실시간으로 결과가 반영됩니다.</p>
       <div class="hero-actions">
         <button class="btn btn-primary" id="startBtn">시작하기</button>
