chore: auto-save code changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Field Nine — 개발의 미래</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="canonical" href="https://fieldnine.io" />
+  <meta name="description" content="AI 기반 차세대 개발 플랫폼. 번개같이 빠른 개발을 경험하고 전례 없는 효율성으로 애플리케이션을 구축하세요." />
+  <meta property="og:title" content="Field Nine — 개발의 미래" />
+  <meta property="og:description" content="AI 기반 차세대 개발 플랫폼으로 개발의 미래를 경험하세요." />
+  <meta property="og:url" content="https://fieldnine.io" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 </head>
 <body>
   <div class="app">
@@ -135,6 +144,37 @@
       </div>
     </section>
 
+    <section class="contact" id="contact">
+      <div class="section-header">
+        <h2>함께 미래를 만들어가세요</h2>
+        <p>fieldnine.io에서 새로운 개발 경험을 시작하세요</p>
+      </div>
+      
+      <div class="contact-info">
+        <div class="contact-item">
+          <div class="contact-icon">🌐</div>
+          <div class="contact-details">
+            <h4>Website</h4>
+            <p>https://fieldnine.io</p>
+          </div>
+        </div>
+        <div class="contact-item">
+          <div class="contact-icon">📧</div>
+          <div class="contact-details">
+            <h4>Email</h4>
+            <p>hello@fieldnine.io</p>
+          </div>
+        </div>
+        <div class="contact-item">
+          <div class="contact-icon">🚀</div>
+          <div class="contact-details">
+            <h4>Status</h4>
+            <p id="siteStatus">Online • Ready</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-brand">
@@ -142,7 +182,7 @@
           <span>Field Nine</span>
         </div>
         <div class="footer-text">
-          한 번에 하나씩 프로젝트로 미래를 구축합니다.
+          © 2024 fieldnine.io • 한 번에 하나씩 프로젝트로 미래를 구축합니다.
         </div>
       </div>
     </footer>
